fix: add text-overflow to suggestion list items (#173)

--- a/src/v2/styles/Autocomplete/Autocomplete-layout.scss
+++ b/src/v2/styles/Autocomplete/Autocomplete-layout.scss
@@ -47,6 +47,7 @@
   column-gap: var(--str-chat__spacing-2);
 
   .str-chat__user-item--name {
+    @include utils.ellipsis-text;
     width: 100%;
   }
 }
@@ -57,6 +58,7 @@
   column-gap: var(--str-chat__spacing-2);
 
   .str-chat__emoji-item--name {
+    @include utils.ellipsis-text;
     width: 100%;
   }
 }
